--- a/.github/workflows/rendergit-to-cloudflare.yml
+++ b/.github/workflows/rendergit-to-cloudflare.yml
@@ -1,14 +1,10 @@
 name: Render & Deploy to Cloudflare Pages
 
+# 简化触发规则：主分支任意文件更新都触发
 on:
   push:
     branches: [main, master]
-    paths:
-      - '**/*.md'
-      - '**/*.py'
-      - '**/*.html'
-      - '!**.github/**'
-  workflow_dispatch:
+  workflow_dispatch:  # 保留手动触发
   schedule:
     - cron: '0 0 * * *'
 
@@ -16,52 +12,52 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      # 步骤1：克隆仓库（仅拉取最新提交，减少耗时）
       - name: Checkout Source Code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 1
 
+      # 步骤2：配置Python（固定版本）
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      # 修复：用官方推荐的 uv 安装命令（无引号错误）
-      - name: Install uv (官方无错版)
+      # 步骤3：安装uv（官方无错命令）
+      - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
-      # 修复：单独添加 uv 到环境变量（避免引号问题）
+      # 步骤4：添加uv到环境变量
       - name: Add uv to PATH
         run: echo "$HOME/.local/bin" >> $GITHUB_PATH
 
+      # 步骤5：安装rendergit
       - name: Install rendergit
         run: uv tool install git+https://github.com/karpathy/rendergit
 
-      - name: Generate Static HTML (过滤隐藏文件)
+      # 步骤6：生成HTML（极简：直接渲染根目录，不过滤任何文件）
+      - name: Generate Static HTML
         run: |
-          rm -rf ./temp_src ./dist
-          mkdir -p ./temp_src ./dist
-          # 单行 find 命令（无隐藏字符）
-          find ./ -maxdepth 10 -type f \( -name "*.md" -o -name "*.py" -o -name "*.html" \) -not -path "./.*" -not -path "./temp_src/*" -not -path "./dist/*" | while read -r file; do cp --parents "$file" ./temp_src/; done
-          # 验证临时目录
-          if [ -z "$(ls -A ./temp_src 2>/dev/null)" ]; then
-            echo "❌ 未找到有效文件"
-            exit 1
-          fi
-          # 渲染 HTML
-          uv run rendergit ./temp_src -o ./dist/index.html --no-open
-          if [ ! -f ./dist/index.html ]; then
+          mkdir -p ./dist
+          # 直接渲染根目录，避免temp_src目录的git克隆错误
+          uv run rendergit ./ -o ./dist/index.html --no-open
+          # 验证HTML生成
+          if [ -f ./dist/index.html ]; then
+            echo "✅ HTML 生成成功"
+          else
             echo "❌ HTML 生成失败"
             exit 1
           fi
-          echo "✅ HTML 生成成功"
 
+      # 步骤7：安装Wrangler（固定版本）
       - name: Install Cloudflare Wrangler
         run: npm install -g wrangler@4.52.1
 
+      # 步骤8：部署到Cloudflare Pages（仅保留必填参数）
       - name: Deploy to Cloudflare Pages
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         run: |
-          wrangler pages deploy ./dist --project-name=rendergit-auto --commit-dirty=true
+          wrangler pages deploy ./dist --project-name=rendergit-auto
           echo "✅ 部署完成！访问地址：https://rendergit-auto.pages.dev"
