--- a/.github/workflows/rendergit-to-cloudflare.yml
+++ b/.github/workflows/rendergit-to-cloudflare.yml
@@ -1,46 +1,16 @@
-name: Render & Deploy to Cloudflare Pages
+name: Render & Deploy
 
-on:
-  push:
-    branches: [main, master]
-  workflow_dispatch:
+on: [push: { branches: [main, master] }, workflow_dispatch]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install rendergit
-        run: pip install git+https://github.com/karpathy/rendergit.git
-
-      - name: Generate static HTML (exclude specified folders)
-        run: |
-          mkdir -p ./dist
-          # 排除 node_modules、.github、dist 文件夹，可按需修改
-          rendergit ./ -o ./dist/index.html --no-open --max-bytes 1000000 \
-            --exclude node_modules/ \
-            --exclude .github/ \
-            --exclude dist/
-          [ -f ./dist/index.html ] || (echo "❌ HTML generation failed" && exit 1)
-          echo "✅ HTML generated successfully"
-
-      - name: Install Cloudflare Wrangler
-        run: |
-          npm install -g wrangler@4.52.1
-          wrangler --version || (echo "❌ Wrangler installation failed" && exit 1)
-
-      - name: Deploy to Cloudflare Pages
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        run: |
-          wrangler pages deploy ./dist --project-name=rendergit-auto
-          echo "✅ Deployed successfully! Visit: https://rendergit-auto.pages.dev"
+      - uses: actions/checkout@v4
+        with: { fetch-depth: 1 }
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.11' }
+      - run: pip install git+https://github.com/karpathy/rendergit.git && mkdir -p dist && rendergit ./ -o dist/index.html --no-open --max-bytes 1000000 && [ -f dist/index.html ] || exit 1
+      - run: npm install -g wrangler@4.52.1
+      - env: { CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }} }
+        run: wrangler pages deploy dist --project-name=rendergit-auto
